fixed bug wiht hamburger menu X not showing up on the nav mobile menu

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,7 @@ nav {
 .hamburger {
   display: block;
   position: relative;
-  z-index: 1;
+  z-index: 100;
   user-select: none;
   appearance: none;
   border: none;
